<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.ProfileSettingActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileSettingsRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewBack"
            style="@style/Icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvSettings"
            style="@style/TVSettings"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBack"
            app:layout_constraintStart_toEndOf="@+id/imageViewBack"
            app:layout_constraintTop_toTopOf="@+id/imageViewBack" />

        <View
            android:id="@+id/view"
            style="@style/canopy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBack" />

        <TextView
            android:id="@+id/tvAccountSetting"
            style="@style/TVAccountSettingsTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tvEditProfileSetting"
            style="@style/TVAccountSettings"
            android:text="@string/edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAccountSetting" />

        <TextView
            android:id="@+id/tvLikePosts"
           style="@style/TVAccountSettings"
            android:text="@string/posts_you_liked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEditProfileSetting" />

        <TextView
            android:id="@+id/tvChangePassword"
            style="@style/TVAccountSettings"
            android:text="@string/change_your_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLikePosts" />

        <TextView
            android:id="@+id/tvSaved"
            style="@style/TVAccountSettings"
            android:text="@string/saved"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />

        <TextView
            android:id="@+id/tvPrivateAccount"
            style="@style/TVAccountSettings"
            android:text="@string/private_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSaved" />

        <TextView
            android:id="@+id/tvClear"
            style="@style/TVAccountSettings"
            android:layout_marginTop="32dp"
            android:text="@string/clear_search_history"
            android:textColor="@color/mavi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrivateAccount" />

        <TextView
            android:id="@+id/tvSignOut"
            style="@style/TVAccountSettings"
            android:text="@string/log_out"
            android:textColor="@color/mavi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvClear" />

        <View
            style="@style/canopy"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            style="@style/BottomNavigationMenu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/profileSettingsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</androidx.constraintlayout.widget.ConstraintLayout>